Closed Bug 1761865 Opened 4 years ago Closed 4 years ago

High freq Android dom/media/test/test_play_promise_<x>.html | assertion count 1 is more than expected 0 assertions

Categories

(Core :: Audio/Video: Playback, defect, P5)

defect

Tracking

()

RESOLVED FIXED
100 Branch
Tracking Status
firefox-esr91 --- unaffected
firefox98 --- unaffected
firefox99 --- unaffected
firefox100 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: kinetik)

References

(Regression)

Details

(Keywords: assertion, intermittent-failure, regression)

Attachments

(1 file)

Filed by: abutkovits [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=372615924&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/ay03gC_kR-6GRzdnceBlqA/runs/0/artifacts/public/logs/live_backing.log


[task 2022-03-28T21:52:57.262Z] 21:52:57     INFO -  TEST-OK | dom/media/test/test_play_promise_11.html | took 427ms
[task 2022-03-28T21:52:57.262Z] 21:52:57  WARNING -  TEST-UNEXPECTED-FAIL | dom/media/test/test_play_promise_11.html | assertion count 1 is more than expected 0 assertions
[task 2022-03-28T21:52:57.262Z] 21:52:57     INFO -  TEST-START | dom/media/test/test_play_promise_12.html
[task 2022-03-28T21:52:57.263Z] 21:52:57     INFO -  TEST-OK | dom/media/test/test_play_promise_12.html | took 909ms
[task 2022-03-28T21:52:57.264Z] 21:52:57     INFO -  TEST-START | dom/media/test/test_play_promise_13.html
[task 2022-03-28T21:52:57.265Z] 21:52:57     INFO -  TEST-OK | dom/media/test/test_play_promise_13.html | took 992ms
[task 2022-03-28T21:52:57.265Z] 21:52:57  WARNING -  TEST-UNEXPECTED-FAIL | dom/media/test/test_play_promise_13.html | assertion count 1 is more than expected 0 assertions
[task 2022-03-28T21:52:57.265Z] 21:52:57     INFO -  TEST-START | dom/media/test/test_play_promise_14.html
[task 2022-03-28T21:53:01.898Z] 21:53:01     INFO -  JavaScript error: /builds/worker/workspace/build/hostutils/host-utils-93.0a1.en-US.linux-x86_64/components/httpd.js, line 2975: NS_ERROR_UNEXPECTED: Component returned failure code: 0x8000ffff (NS_ERROR_UNEXPECTED) [nsIBinaryOutputStream.writeByteArray]
[task 2022-03-28T21:53:07.352Z] 21:53:07     INFO -  TEST-OK | dom/media/test/test_play_promise_14.html | took 1038ms
[task 2022-03-28T21:53:07.352Z] 21:53:07     INFO -  TEST-START | dom/media/test/test_play_promise_15.html
[task 2022-03-28T21:53:07.353Z] 21:53:07     INFO -  TEST-OK | dom/media/test/test_play_promise_15.html | took 437ms
[task 2022-03-28T21:53:07.354Z] 21:53:07     INFO -  TEST-START | dom/media/test/test_play_promise_16.html
[task 2022-03-28T21:53:07.355Z] 21:53:07     INFO -  TEST-OK | dom/media/test/test_play_promise_16.html | took 1030ms
[task 2022-03-28T21:53:07.355Z] 21:53:07     INFO -  TEST-START | dom/media/test/test_play_promise_17.html
[task 2022-03-28T21:53:07.356Z] 21:53:07     INFO -  TEST-OK | dom/media/test/test_play_promise_17.html | took 409ms
[task 2022-03-28T21:53:07.356Z] 21:53:07     INFO -  TEST-START | dom/media/test/test_play_promise_18.html
[task 2022-03-28T21:53:07.357Z] 21:53:07     INFO -  TEST-OK | dom/media/test/test_play_promise_18.html | took 903ms
[task 2022-03-28T21:53:07.358Z] 21:53:07     INFO -  TEST-START | dom/media/test/test_play_promise_2.html
[task 2022-03-28T21:53:07.359Z] 21:53:07     INFO -  TEST-OK | dom/media/test/test_play_promise_2.html | took 884ms
[task 2022-03-28T21:53:07.359Z] 21:53:07  WARNING -  TEST-UNEXPECTED-FAIL | dom/media/test/test_play_promise_2.html | assertion count 1 is more than expected 0 assertions
[task 2022-03-28T21:53:07.359Z] 21:53:07     INFO -  TEST-START | dom/media/test/test_play_promise_3.html

Hi Dan!

This started to fail after the landing of Bug 1748215, could you take a look into this?

Thanks

Flags: needinfo?(dmosedale)
Regressed by: 1748215
Has Regression Range: --- → yes
Flags: needinfo?(dmosedale) → needinfo?(kinetik)
Regressed by: 1753298
No longer regressed by: 1748215
Assignee: nobody → kinetik
Status: NEW → ASSIGNED

I'm having an extremely hard time seeing how these two could be connected. Redirecting the needinfo to Ed, who might have some insight here...

Flags: needinfo?(edilee)

I'm assuming that the patch in this bug will be the appropriate fix. Removing an unnecesarry needinfo. Feel free to put it back if I'm wrong...

Flags: needinfo?(edilee)
Flags: needinfo?(kinetik)
Pushed by mgregan@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/66f7cb9ecdf4 Change assert to warning; follow up to bug 1753298. r=padenot
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 100 Branch

(In reply to Intermittent Failures Robot from comment #10)

63 failures in 3323 pushes (0.019 failures/push) were associated with this bug in the last 7 days.

These are all before https://hg.mozilla.org/integration/autoland/rev/66f7cb9ecdf4 landed.

You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: