Bug 1761865 - Change assert to warning; follow up to bug 1753298. r=padenot

Differential Revision: https://phabricator.services.mozilla.com/D142324